demo/service.yml
apiVersion: v1
kind: Service
metadata:
  name: spring-api-service
  namespace: learning
spec:
  type: NodePort
  selector:
    app: spring-api
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
    nodePort: 30000
