demo/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spring-api-ingress
  namespace: ingress-nginx
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: my-spring-api-app
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: spring-api-service-external
            port:
              number: 80
  ingressClassName: nginx
  ingressClassName: nginx
  ingressClassName: nginx
